# jvm-demo

./: .gitignore  CMakeLists.txt  README.md  daily_plan.md
tests/: CMakeLists.txt
tests/googletest/googletest/include/gtest/: gtest.h
tests/javasample/com/sample/ch02/: ClassReaderTest.java  Sample.java
tests/javasample/com/sample/ch07/: FibonacciTest.java  InvokeDemo.java  TestMain.java
tests/javasample/com/sample/ch08/: ArrayTest.java  StringTest.java
tests/javasample/com/sample/ch09/: CloneTest.java  GetClassTest.java  ObjectTest.java  StringTest.java
tests/javasample/src/com/sample/ch05/: GaussTest.java
tests/javasample/src/com/sample/ch06/: MyObject.java
tests/javasample/src/com/sample/ch07/: ClinitTest.java  FibonacciTest.java  InvokeDemo.java
tests/javasample/src/com/sample/ch08/: ArrayTest.java  BubbleSort.java  SingleArrayTest.java
tests/src/: command_test.cpp  jvm_test.cpp  test_main.cpp
tests/src/classfile_test/: ClassParserTest.cpp  ConstantInfoTest.cpp  class_parser_test.cpp  constant_info_test.cpp
tests/src/classpath_test/: ClassPathParserTest.cpp  ClassReaderTest.cpp  class_path_parser_test.cpp  class_reader_test.cpp
tests/src/instructions_test/: LoadInstructionsTest.cpp  base_instructions_test.cpp  load_instructions_test.cpp
tests/src/rtda_test/: StackTest.cpp  local_vars_test.cpp  operand_stack_test.cpp  stack_test.cpp  thread_test.cpp
tests/src/runtime_test/: class_loader_test.cpp  frame_test.cpp  local_vars_test.cpp  method_test.cpp  operand_stack_test.cpp  stack_test.cpp  thread_test.cpp
tests/src/runtime_test/heap/: heap_test.cpp
(+176 files in other folders)
